[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "highrule"
authors = [{name = "David Nicholson", email = "nickledave@users.noreply.github.com"}]
version = "0.1.0"
description = "game: Caves of High Rule"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "pygame >=2.1.2",
]

[project.urls]
Home = "https://github.com/NickleDave/highrule"
